<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_main_btm_nav_home"
        android:icon="@drawable/ic_home"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_home_title" />

    <item
        android:id="@+id/menu_main_btm_nav_user"
        android:icon="@drawable/ic_user"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_user_title" />

    <item
        android:id="@+id/menu_main_btm_nav_setting"
        android:icon="@drawable/ic_setting"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_setting_title" />
</menu>