<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/count_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:layout_weight="0.5"
        android:text="@string/main_info_btm_nav_number_title"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <View
        android:layout_width="1px"
        android:background="@color/black"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:layout_weight="1.5"
        android:text="@string/main_info_btm_nav_name_title"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <View
        android:layout_width="1px"
        android:background="@color/black"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/school_level_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:layout_weight="1.5"
        android:text="@string/main_info_btm_nav_school_title"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <View
        android:layout_width="1px"
        android:background="@color/black"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/gender_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:layout_weight="0.5"
        android:text="@string/main_info_btm_nav_gender_title"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <View
        android:layout_width="1px"
        android:background="@color/black"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/parent_number_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:layout_weight="2"
        android:text="@string/main_info_btm_nav_parent_number_title"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <View
        android:layout_width="1px"
        android:background="@color/black"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/student_number_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:layout_weight="2"
        android:text="@string/main_info_btm_nav_student_number_title"
        android:textColor="@color/black"
        android:textStyle="bold"/>


</LinearLayout>