<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:src="@drawable/back_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/main_info_btm_nav_user_setting_title"
            android:textColor="@color/black" />


    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_btn" />

    <LinearLayout
        android:id="@+id/add_user_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:padding="5dp"
        android:background="@drawable/custom_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/add_btn"
            android:background="@color/white"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_info_btm_nav_user_add_title"
            android:textColor="@color/black"
            android:layout_marginStart="5dp"
            android:layout_gravity="center"/>


    </LinearLayout>

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:iconifiedByDefault="true"
        android:queryHint="이름을 검색하세요"
        android:searchIcon="@drawable/search_btn"
        app:layout_constraintBottom_toBottomOf="@+id/add_user_btn"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="@+id/add_user_btn"
        app:layout_constraintVertical_bias="0.47" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/searchView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchView">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/white"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:src="@drawable/down_list_btn" />

        <EditText
            android:id="@+id/sort_kind_edt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="이름 가나다 순" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_gravity="center"
            android:src="@drawable/down_btn"/>


    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:weightSum="8"
        android:background="@drawable/custom_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:layout_weight="0.5"
            android:text="@string/main_info_btm_nav_number_title"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <View
            android:layout_width="1px"
            android:background="@color/black"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:layout_weight="1.5"
            android:text="@string/main_info_btm_nav_name_title"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <View
            android:layout_width="1px"
            android:background="@color/black"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:layout_weight="1.5"
            android:text="@string/main_info_btm_nav_school_title"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <View
            android:layout_width="1px"
            android:background="@color/black"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:layout_weight="0.5"
            android:text="@string/main_info_btm_nav_gender_title"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <View
            android:layout_width="1px"
            android:background="@color/black"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:layout_weight="2"
            android:text="@string/main_info_btm_nav_parent_number_title"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <View
            android:layout_width="1px"
            android:background="@color/black"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:layout_weight="2"
            android:text="@string/main_info_btm_nav_student_number_title"
            android:textColor="@color/black"
            android:textStyle="bold"/>

    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/user_info_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>